<resources>
    <string name="app_name">Shortcut Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="multi_item_shopping">Multi-Item Shopping</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="tip">Tip</string>
    <string name="multi_activity">Multi-Item Shopping</string>
    <string name="tip_activity">Tip Calculator</string>
    <string name="sales_tax_activity">Single Item Sales Tax</string>
    <string name="add_item">Add Item</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="_0_00">$0.00</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="current">Current</string>
    <string name="item_type">Item Type</string>
    <string name="new_price">New Price</string>
    <string name="cancelBtn">Cancel</string>
    <string name="cartitem">CartItem</string>
    <string name="edit_item">Edit Item</string>
    <string name="updateBtn">Update</string>
    <string name="delete">Delete</string>
    <string name="tipLbl">Tip:</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="badInput">Invalid Input</string>
    <string name="priceTaxLbl">Price:</string>
</resources>
