<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/currentLbl"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/current" />

            <TextView
                android:id="@+id/itemLbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/priceLbl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_price"
                tools:layout_editor_absoluteX="106dp"
                tools:layout_editor_absoluteY="8dp" />

            <EditText
                android:id="@+id/updatePriceBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemTypelbl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_type"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="59dp" />

            <Spinner
                android:id="@+id/updateListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/itemtypes" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>